# MCP_CMA

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-15-mcp-agno-docs.md
docs/superpowers/specs/: 2026-03-15-mcp-agno-docs-design.md
mcp_agno/: catalog.py  fetcher.py  server.py  tools.py
mcp_claude/: cache.py  catalog.py  fetcher.py  server.py  tools.py
tests/: test_cache.py  test_catalog.py  test_fetcher.py  test_server.py  test_tools.py
