[project]
name = "mcp-agno"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["mcp", "httpx", "beautifulsoup4", "lxml", "html2text"]

[project.scripts]
mcp-agno = "mcp_agno.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
